@@ -1,3 +1,8 @@
+Sun May 24 11:58:15 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/IRGenerator.java (If): refactoring:
+	  increase readability.
+
 Sun May 24 02:08:47 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* utilize final field.
